# Food-delivery-platform

./: CMakeLists.txt  CMakeLists.txt.user.ba1f671  Image.qrc  README.md  Seller.cpp  Seller.h  ServerConnectionManager.h  StarRatingWidget .h  StarRatingWidget.h  all.cpp  all.h  con_reviews.cpp  con_reviews.h  consumer_interface.cpp  consumer_interface.h  customer.cpp  customer.h  database.cpp  database.h  detailedmenu.cpp  detailedmenu.h  head.h  icon.qrc  index.html  log.cpp  log.h  log.ui  logic.cpp  logic.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h  map.ui  order_review.cpp  (+27 more)
admin/: admini_check.cpp  admini_check.h  admini_check.ui  admini_info.cpp  admini_info.h  admini_info.ui  admini_info_done.cpp  admini_info_done.h  admini_info_done.ui  admini_main.cpp  admini_main.h  admini_main.ui  admini_orderwidget.cpp  admini_orderwidget.h  adminiwindow.cpp  adminiwindow.h  adminiwindow.ui
administrator/: CMakeLists.txt  admini_check.cpp  admini_check.h  admini_check.ui  admini_info.cpp  admini_info.h  admini_info.ui  admini_info_done.cpp  admini_info_done.h  admini_info_done.ui  admini_main.cpp  admini_main.h  admini_main.ui  adminiwindow.cpp  adminiwindow.h  adminiwindow.ui  main.cpp  main.h
administrator_2/: CMakeLists.txt
business/: dishchange.cpp  dishchange.h  dishchange.ui  dishwidget.cpp  dishwidget.h  evalute.cpp  evalute.h  evalute.ui  good_act.cpp  good_act.h  good_act.ui  good_mange.cpp  good_mange.h  good_mange.ui  inform.cpp  inform.h  inform.ui  inform_change.cpp  inform_change.h  inform_change.ui  shangjia.cpp  shangjia.h  shangjia.ui  shangjia2.cpp  shangjia2.h  shangjia2.ui  shangjia3.cpp  shangjia3.h  shangjia3.ui  workbench.cpp  workbench.h  workbench.ui
consumer/: address.cpp  address.h  address.ui  change_inform.cpp  change_inform.h  change_inform.ui  complaints.cpp  complaints.h  complaints.ui  con_reviews.cpp  con_reviews.h  con_reviews.ui  consumer_information.cpp  consumer_information.h  consumer_information.ui  consumer_interface.cpp  consumer_interface.h  consumer_interface.ui  detailedmenu.cpp  detailedmenu.h  detailedmenu.ui  dish_widget.cpp  dish_widget.h  history_orderwidget.cpp  history_orderwidget.h  histroy_record.cpp  histroy_record.h  histroy_record.ui  orderstatus.cpp  orderstatus.h  orderstatus.ui  sellerwidget.cpp  sellerwidget.h  shoppingcart.cpp  shoppingcart.h  shoppingcart.ui  storepage.cpp  storepage.h  storepage.ui
database/: database.cpp  database.h
rider/: order_review.cpp  order_review.h  order_review.ui  orderwidget.cpp  orderwidget.h  rider_inform.cpp  rider_inform.h  rider_inform.ui  rider_main.cpp  rider_main.h  rider_main.ui  task_completed.cpp  task_completed.h  task_completed.ui  task_inform.cpp  task_inform.h  task_inform.ui  timeworker.cpp  timeworker.h
